fix overflow-y problem on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html,
 body {
     height: 100%;
     margin: 0;
-    /*overflow-y: scroll;*/
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
 
